<resources>
    <string name="app_name">Digital House Foods</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="register">REGISTER</string>
    <string name="Name">Name</string>
    <string name="Repeatpassword">Repeat Password</string>
    <string name="nomerestaurante">Nome do Restaurante</string>
    <string name="foto_de_capa_do_restaurante">Foto de capa do restaurante</string>
    <string name="endereco_do_restaurante">Endereço do Restaurante</string>
    <string name="_12_12">12:12</string>
    <string name="fecha_as">Fecha às  </string>
    <string name="foto_do_restaurante">Foto de capa do Restaurante</string>
    <string name="nome_do_restaurante">Nome do Restaurante</string>
    <string name="pratos_principais">Pratos Principais</string>
    <string name="imagem_do_prato_escolhido">Imagem do prato escolhido</string>
    <string name="nome_do_prato">Nome do prato</string>
    <string name="texto_descritivo">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis</string>
    <string name="nome_do_prato_item">Nome do Prato</string>

</resources>