<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#56CFCDCD">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item_img_rest"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/foto_de_capa_do_restaurante" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/item_tv_nomeRestaurante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_do_restaurante"
                    android:textColor="#2C2C2C"
                    android:textStyle="bold"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/item_tv_endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/endereco_do_restaurante"
                    android:textColor="#686565"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_as"
                        android:textColor="#686565"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/item_tv_horario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_12_12"
                        android:textColor="#686565"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>